--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "dev": "tailwindcss -i ./public/css/tailwind.css -o ./public/css/output.css --watch"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,10 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "validator": "^13.12.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.13"
   }
 }
